# InfiniteWidthDepthNN

./: .gitignore  Manual_Validation.ipynb  README.md  pyproject.toml  pytest.ini
frontend/: frontend.py
tests/: UNet_model_test.py  UNet_train_test.py  dataset_creator_test.py  utils_test.py
unet_segmentation/: UNet_model.py  UNet_train.py  augmentation.ipynb  dataset_creator.py  logger.py  utils.py
