[tool.poetry]
name = "unet-segmentation"
version = "0.1.0"
description = ""
authors = ["Suraj Pal Singh <dev.suraj.pal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
pillow = "^10.3.0"
matplotlib = "^3.8.4"
scikit-image = "^0.23.2"
scikit-learn = "^1.4.2"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
